--- a/vsdownload/vsdownload.ui
+++ b/vsdownload/vsdownload.ui
@@ -268,16 +268,16 @@
                <widget class="QLineEdit" name="outputLineEdit_save"/>
               </item>
               <item row="3" column="1">
-               <widget class="QCheckBox" name="maxqualityCheckBox">
+               <widget class="QCheckBox" name="max_qualityCheckBox">
                 <property name="text">
                  <string/>
                 </property>
                </widget>
               </item>
               <item row="3" column="0">
-               <widget class="QLabel" name="maxqualityLabel">
+               <widget class="QLabel" name="max_qualityLabel">
                 <property name="text">
-                 <string>maxquality</string>
+                 <string>max_quality</string>
                 </property>
                </widget>
               </item>
@@ -317,8 +317,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>406</width>
-             <height>348</height>
+             <width>219</width>
+             <height>166</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_5">
