--- a/vsdownload/vsdownload.ui
+++ b/vsdownload/vsdownload.ui
@@ -41,12 +41,161 @@
              <x>0</x>
              <y>0</y>
              <width>389</width>
-             <height>484</height>
+             <height>508</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_4">
             <item>
              <layout class="QGridLayout" name="save_page_basic_grid_layout">
+              <item row="13" column="2">
+               <widget class="QPushButton" name="save_page_tempdir_btn">
+                <property name="text">
+                 <string>open</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="0">
+               <widget class="QLabel" name="cleanupLabel_save">
+                <property name="text">
+                 <string>cleanup</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="1">
+               <widget class="QLineEdit" name="outputLineEdit_save"/>
+              </item>
+              <item row="15" column="0">
+               <widget class="QLabel" name="timeoutLabel">
+                <property name="text">
+                 <string>timeout</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1">
+               <widget class="QLineEdit" name="inputLineEdit"/>
+              </item>
+              <item row="12" column="2">
+               <widget class="QPushButton" name="save_page_ffmpeg_path_btn">
+                <property name="text">
+                 <string>open</string>
+                </property>
+               </widget>
+              </item>
+              <item row="16" column="0">
+               <widget class="QLabel" name="pre_selectLabel">
+                <property name="text">
+                 <string>pre_select</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <widget class="QLabel" name="outputLabel_save">
+                <property name="text">
+                 <string>output*</string>
+                </property>
+               </widget>
+              </item>
+              <item row="11" column="1">
+               <widget class="QLineEdit" name="proxy_addressLineEdit"/>
+              </item>
+              <item row="13" column="1">
+               <widget class="QLineEdit" name="tempdirLineEdit"/>
+              </item>
+              <item row="12" column="1">
+               <widget class="QLineEdit" name="ffmpeg_pathLineEdit"/>
+              </item>
+              <item row="8" column="1">
+               <widget class="QLineEdit" name="headersLineEdit"/>
+              </item>
+              <item row="14" column="0">
+               <widget class="QLabel" name="retry_countLabel">
+                <property name="text">
+                 <string>retry_count</string>
+                </property>
+               </widget>
+              </item>
+              <item row="4" column="0">
+               <widget class="QLabel" name="verboseLabel">
+                <property name="text">
+                 <string>verbose</string>
+                </property>
+               </widget>
+              </item>
+              <item row="6" column="0">
+               <widget class="QLabel" name="threadsLabel">
+                <property name="text">
+                 <string>threads</string>
+                </property>
+               </widget>
+              </item>
+              <item row="10" column="0">
+               <widget class="QLabel" name="key_ivLabel">
+                <property name="text">
+                 <string>key_iv</string>
+                </property>
+               </widget>
+              </item>
+              <item row="10" column="1">
+               <widget class="QLineEdit" name="key_ivLineEdit"/>
+              </item>
+              <item row="1" column="2">
+               <widget class="QPushButton" name="save_page_output_btn">
+                <property name="text">
+                 <string>save</string>
+                </property>
+               </widget>
+              </item>
+              <item row="15" column="1">
+               <widget class="QSpinBox" name="timeoutSpinBox"/>
+              </item>
+              <item row="13" column="0">
+               <widget class="QLabel" name="tempdirLabel">
+                <property name="text">
+                 <string>tempdir</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="1">
+               <widget class="QCheckBox" name="cleanupCheckBox"/>
+              </item>
+              <item row="14" column="1">
+               <widget class="QSpinBox" name="retry_countSpinBox">
+                <property name="minimum">
+                 <number>1</number>
+                </property>
+                <property name="maximum">
+                 <number>100</number>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="0">
+               <widget class="QLabel" name="inputLabel">
+                <property name="text">
+                 <string>input*</string>
+                </property>
+               </widget>
+              </item>
+              <item row="4" column="1">
+               <widget class="QCheckBox" name="verboseCheckBox">
+                <property name="text">
+                 <string/>
+                </property>
+               </widget>
+              </item>
+              <item row="11" column="0">
+               <widget class="QLabel" name="proxy_addressLabel">
+                <property name="text">
+                 <string>proxy_address</string>
+                </property>
+               </widget>
+              </item>
+              <item row="8" column="0">
+               <widget class="QLabel" name="headersLabel">
+                <property name="text">
+                 <string>headers</string>
+                </property>
+               </widget>
+              </item>
               <item row="7" column="1">
                <widget class="QSpinBox" name="chunk_sizeSpinBox">
                 <property name="minimum">
@@ -60,31 +209,14 @@
                 </property>
                </widget>
               </item>
-              <item row="1" column="0">
-               <widget class="QLabel" name="outputLabel_save">
+              <item row="7" column="0">
+               <widget class="QLabel" name="chunk_sizeLabel">
                 <property name="text">
-                 <string>output*</string>
+                 <string>chunk_size</string>
                 </property>
                </widget>
               </item>
-              <item row="4" column="1">
-               <widget class="QCheckBox" name="verboseCheckBox">
-                <property name="text">
-                 <string/>
-                </property>
-               </widget>
-              </item>
-              <item row="12" column="2">
-               <widget class="QPushButton" name="save_page_tempdir_btn">
-                <property name="text">
-                 <string>open</string>
-                </property>
-               </widget>
-              </item>
-              <item row="10" column="1">
-               <widget class="QLineEdit" name="proxy_addressLineEdit"/>
-              </item>
-              <item row="15" column="1">
+              <item row="16" column="1">
                <widget class="QSpinBox" name="pre_selectSpinBox">
                 <property name="minimum">
                  <number>-1</number>
@@ -94,20 +226,17 @@
                 </property>
                </widget>
               </item>
-              <item row="14" column="1">
-               <widget class="QSpinBox" name="timeoutSpinBox"/>
-              </item>
-              <item row="6" column="0">
-               <widget class="QLabel" name="threadsLabel">
+              <item row="0" column="2">
+               <widget class="QPushButton" name="save_page_input_btn">
                 <property name="text">
-                 <string>threads</string>
+                 <string>open</string>
                 </property>
                </widget>
               </item>
-              <item row="7" column="0">
-               <widget class="QLabel" name="chunk_sizeLabel">
+              <item row="8" column="2">
+               <widget class="QPushButton" name="save_page_headers_btn">
                 <property name="text">
-                 <string>chunk_size</string>
+                 <string>open</string>
                 </property>
                </widget>
               </item>
@@ -121,127 +250,15 @@
                 </property>
                </widget>
               </item>
-              <item row="10" column="0">
-               <widget class="QLabel" name="proxy_addressLabel">
+              <item row="3" column="1">
+               <widget class="QCheckBox" name="max_qualityCheckBox">
                 <property name="text">
-                 <string>proxy_address</string>
+                 <string/>
                 </property>
                </widget>
-              </item>
-              <item row="0" column="2">
-               <widget class="QPushButton" name="save_page_input_btn">
-                <property name="text">
-                 <string>open</string>
-                </property>
-               </widget>
-              </item>
-              <item row="11" column="1">
-               <widget class="QLineEdit" name="ffmpeg_pathLineEdit"/>
-              </item>
-              <item row="12" column="1">
-               <widget class="QLineEdit" name="tempdirLineEdit"/>
               </item>
               <item row="5" column="1">
                <widget class="QLineEdit" name="baseurlLineEdit_save"/>
-              </item>
-              <item row="13" column="0">
-               <widget class="QLabel" name="retry_countLabel">
-                <property name="text">
-                 <string>retry_count</string>
-                </property>
-               </widget>
-              </item>
-              <item row="9" column="1">
-               <widget class="QLineEdit" name="key_ivLineEdit"/>
-              </item>
-              <item row="12" column="0">
-               <widget class="QLabel" name="tempdirLabel">
-                <property name="text">
-                 <string>tempdir</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="QLineEdit" name="inputLineEdit"/>
-              </item>
-              <item row="13" column="1">
-               <widget class="QSpinBox" name="retry_countSpinBox">
-                <property name="minimum">
-                 <number>1</number>
-                </property>
-                <property name="maximum">
-                 <number>100</number>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="1">
-               <widget class="QCheckBox" name="cleanupCheckBox"/>
-              </item>
-              <item row="8" column="0">
-               <widget class="QLabel" name="headersLabel">
-                <property name="text">
-                 <string>headers</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="0">
-               <widget class="QLabel" name="inputLabel">
-                <property name="text">
-                 <string>input*</string>
-                </property>
-               </widget>
-              </item>
-              <item row="4" column="0">
-               <widget class="QLabel" name="verboseLabel">
-                <property name="text">
-                 <string>verbose</string>
-                </property>
-               </widget>
-              </item>
-              <item row="9" column="0">
-               <widget class="QLabel" name="key_ivLabel">
-                <property name="text">
-                 <string>key_iv</string>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="0">
-               <widget class="QLabel" name="cleanupLabel_save">
-                <property name="text">
-                 <string>cleanup</string>
-                </property>
-               </widget>
-              </item>
-              <item row="14" column="0">
-               <widget class="QLabel" name="timeoutLabel">
-                <property name="text">
-                 <string>timeout</string>
-                </property>
-               </widget>
-              </item>
-              <item row="8" column="1">
-               <widget class="QLineEdit" name="headersLineEdit"/>
-              </item>
-              <item row="11" column="2">
-               <widget class="QPushButton" name="save_page_ffmpeg_path_btn">
-                <property name="text">
-                 <string>open</string>
-                </property>
-               </widget>
-              </item>
-              <item row="8" column="2">
-               <widget class="QPushButton" name="save_page_headers_btn">
-                <property name="text">
-                 <string>open</string>
-                </property>
-               </widget>
-              </item>
-              <item row="11" column="0">
-               <widget class="QLabel" name="ffmpeg_pathLabel">
-                <property name="text">
-                 <string>ffmpeg_path</string>
-                </property>
-               </widget>
               </item>
               <item row="5" column="0">
                <widget class="QLabel" name="baseurlLabel_save">
@@ -250,34 +267,31 @@
                 </property>
                </widget>
               </item>
-              <item row="1" column="2">
-               <widget class="QPushButton" name="save_page_output_btn">
-                <property name="text">
-                 <string>save</string>
-                </property>
-               </widget>
-              </item>
-              <item row="15" column="0">
-               <widget class="QLabel" name="pre_selectLabel">
-                <property name="text">
-                 <string>pre_select</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="1">
-               <widget class="QLineEdit" name="outputLineEdit_save"/>
-              </item>
-              <item row="3" column="1">
-               <widget class="QCheckBox" name="max_qualityCheckBox">
-                <property name="text">
-                 <string/>
-                </property>
-               </widget>
-              </item>
               <item row="3" column="0">
                <widget class="QLabel" name="max_qualityLabel">
                 <property name="text">
                  <string>max_quality</string>
+                </property>
+               </widget>
+              </item>
+              <item row="12" column="0">
+               <widget class="QLabel" name="ffmpeg_pathLabel">
+                <property name="text">
+                 <string>ffmpeg_path</string>
+                </property>
+               </widget>
+              </item>
+              <item row="9" column="0">
+               <widget class="QLabel" name="decryptLabel">
+                <property name="text">
+                 <string>decrypt</string>
+                </property>
+               </widget>
+              </item>
+              <item row="9" column="1">
+               <widget class="QCheckBox" name="decryptCheckBox">
+                <property name="text">
+                 <string/>
                 </property>
                </widget>
               </item>
